--- a/start.html
+++ b/start.html
@@ -30,6 +30,7 @@
 
     <script src="tools.js"></script>
     <script src="code/track.js?02"></script>
+    <script src="code/signal.js"></script>
     <script src="code/trackRendering_basic.js"></script>
     <script src="code/trackRendering_textured.js"></script>
     <script src="code/start.js?01"></script>
