--- a/start.html
+++ b/start.html
@@ -50,26 +50,23 @@
     <div id="toolbar" class="navbar-dark rounded-pill">
         <a id="navbarBrand" class="navbar-brand" href="#" >Gleisplan Editor</a>
         <button id="btnPlay" type="button" class="btn btn-secondary btn-sm" title="Signale bedienen">
-            Play <i class="bi bi-cursor-fill"></i>
+            Spielen <i class="bi bi-cursor-fill"></i>
         </button>
-        <button id="btnDrawTracks" type="button" class="btn btn-secondary btn-sm active" title="Gleise zeichnen">
-            Build
+        <button id="btnDrawTracks" type="button" class="btn btn-secondary btn-sm active" title="Gleise und Signale zeichnen">
+            Bauen
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tools"
                 viewBox="0 0 16 16">
                 <path
                     d="M9.972 2.508a.5.5 0 0 0-.16-.556l-.178-.129a5.009 5.009 0 0 0-2.076-.783C6.215.862 4.504 1.229 2.84 3.133H1.786a.5.5 0 0 0-.354.147L.146 4.567a.5.5 0 0 0 0 .706l2.571 2.579a.5.5 0 0 0 .708 0l1.286-1.29a.5.5 0 0 0 .146-.353V5.57l8.387 8.873A.5.5 0 0 0 14 14.5l1.5-1.5a.5.5 0 0 0 .017-.689l-9.129-8.63c.747-.456 1.772-.839 3.112-.839a.5.5 0 0 0 .472-.334z" />
             </svg>
         </button>
-        <button id="btnDraw" type="button" class="btn btn-secondary btn-sm" title="Zeichnen">
+       <!--  <button id="btnDraw" type="button" class="btn btn-secondary btn-sm" title="Zeichnen">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tools"
                 viewBox="0 0 16 16">
                 <path
                     d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
             </svg>
-        </button>
-        <button id="btnGrid" type="button" class="btn btn-secondary btn-sm" title="zeige Gitter">
-            <i class="bi bi-grid-3x3"></i>
-        </button>
+        </button>         -->
         <button id="btnClear" type="button" class="btn btn-secondary btn-sm" title="alles entfernen">
             <i class="bi bi-trash"></i>
         </button>
