--- a/start.html
+++ b/start.html
@@ -28,7 +28,7 @@
     <script src="code/preLoader.js"></script>
     <script src="code/signaling.js"></script>
 
-    <script src="tools.js"></script>
+    <script src="code/tools.js"></script>
     <script src="code/track.js?02"></script>
     <script src="code/signal.js"></script>
     <script src="code/trackRendering_basic.js"></script>
