--- a/start.html
+++ b/start.html
@@ -48,7 +48,7 @@
     <div class="visually-hidden" style="font-family: DIN condenced;">dummy to load font face</div>
 
     <div id="toolbar" class="navbar-dark rounded-pill">
-        <a id="navbarBrand" class="navbar-brand" href="#" >Gleisplan Editor</a>
+        <a id="navbarBrand" class="navbar-brand" href="#" ><img src="logo.svg" alt="" width="70" height="70" />Gleisplan Editor</a>
         <button id="btnPlay" type="button" class="btn btn-secondary btn-sm" title="Signale bedienen">
             Spielen <i class="bi bi-cursor-fill"></i>
         </button>
