hv vorsignal wieder hinzugefügt

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                     <h1 class="display-3">Gleisplan Editor</h1>
                     <p  class="lead">Willkommen bei der App Gleisplan-Editor.</p>
                     <img src="welcome.png" alt="" />
-                    <p>Diese App ermöglicht es Gleispläne sehr einfach zu entwickeln. Zeichne Bahnhofs oder Streckengleise, versehe Speichern
-                    sie mit Signalen und Speichere sie als Bild oder nutzt sie interaktiv im Unterricht.</p>
+                    <p>Diese App ermöglicht es Gleispläne sehr einfach zu entwickeln. Zeichne Bahnhofs oder Streckengleise, versehe 
+                    sie mit Signalen und speichere sie als Bild oder nutzt sie interaktiv in dem du die Signale und Weichen stellst.</p>
                 </div>
             </div>
             <div class="content_spacer" id="Features">
@@ -132,7 +132,7 @@
             </div>
             <div class="content_spacer" id="impressum">
                 <div class="content" >
-                    <h4 >Features</h4>
+                    <h4 >Impressum</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eleifend eleifend nisl, eu mollis ante mattis a. Quisque libero arcu, interdum in efficitur non, varius vitae
                         lacus. Nam eu mi a lectus fringilla efficitur. In at sem a purus hendrerit mattis et a sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras ut purus dui.
