--- a/start.html
+++ b/start.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-    <div class="visually-hidden" style="font-family: DIN condenced;">dummy to load font face</div>
+    <div class="visually-hidden" style="font-family: DOT;">dummy to load font face</div>
 
     <div id="toolbar" class="navbar-dark rounded-pill">
         <a id="navbarBrand" class="navbar-brand" href="#" ><img src="logo.svg" alt="" width="70" height="70" />Gleisplan Editor</a>
