--- a/start.html
+++ b/start.html
@@ -164,7 +164,7 @@
                     </div>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body" id="divRecent">
+                <div class="modal-body">
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="card">
