some performce improfements

--- a/start.html
+++ b/start.html
@@ -174,9 +174,9 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="card">
-                                <div class="card-header">Streckenband 2 Gleisig</div>
+                                <div class="card-header">Zweigleisig Streck</div>
                                 <div class="card-body">
-                                    <p class="card-text">Das bekannte KTM Streckenband von Wetserhausen bis Kleinstadt.</p>
+                                    <p class="card-text">Mehere Bahnhöfe an einer zweigleisigen Strecke.</p>
                                 </div>
                                 <div class="card-footer d-grid" style="background-color: white; border-top: none">
                                     <button href="#" id="btnLoad2Gleisig" class="btn btn-sm btn-primary">Start</button>
@@ -185,9 +185,9 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="card">
-                                <div class="card-header">Streckenband 1 Gleisig</div>
+                                <div class="card-header">Eingleisige Strecke</div>
                                 <div class="card-body">
-                                    <p class="card-text">Das bekannte KTM Streckenband von Wetserhausen bis Kleinstadt.</p>
+                                    <p class="card-text">Mehere Bahnhöfe an einer zweigleisigen Strecke.</p>
                                 </div>
                                 <div class="card-footer d-grid" style="background-color: white; border-top: none">
                                     <button class="btn btn-sm btn-primary" disabled>Start</button>
