--- a/start.html
+++ b/start.html
@@ -27,6 +27,7 @@
         <script src="code/signaling.js"></script>
 
         <script src="code/tools.js"></script>
+        <script src="code/train.js"></script>
         <script src="code/track.js?02"></script>
         <script src="code/signal.js"></script>
         <script src="code/trackRendering_basic.js"></script>
