signalmenü neu gestaltet

--- a/start.html
+++ b/start.html
@@ -149,12 +149,13 @@
          <div id="signalEditMenu">
             <div id="signalEditMenuHeader">
                <h5 class="card-title">HV Signal</h5>
-               <p class="card-text">Esig A5 <i class="bi bi-pencil"></i></p>
+               <p class="card-text"><span>Esig A5</span> <a href="#" ><i class="bi bi-pencil"></i></a></p>
+               <input  class="form-control form-control-sm" style="display: none;" type="text">
             </div>
             <div class="btn-group m-3 webkit-fill-width" role="group" aria-label="Basic example">
-               <button type="button" class="btn btn-sm btn-outline-primary"><i class="bi bi-0-square"></i> Grundstellung</button>
-               <button type="button" class="btn btn-sm btn-outline-primary"><i class="bi bi-search"></i> Einzelansicht</button>
-               <button type="button" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i></button>
+               <button id="btnGrundstellung" type="button" class="btn btn-sm btn-outline-primary"><i class="bi bi-0-square"></i> Grundstellung</button>
+               <button id="btn2ndScreen" type="button" class="btn btn-sm btn-outline-primary"><i class="bi bi-search"></i> Einzelansicht</button>
+               <button id="btnRemoveSignal" type="button" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i></button>
             </div>
             <nav>
                <div class="nav nav-tabs nav-fill px-1" role="tablist">
