--- a/start.html
+++ b/start.html
@@ -43,7 +43,7 @@
 
       <div id="toolbar" class="navbar-dark rounded-pill">
          <a id="navbarBrand" class="navbar-brand" href="start.html"><img src="logo.svg" alt="" width="70" height="70" />Gleisplan Editor</a>
-         <div class="" style="padding-left: 2rem">
+         <div class="btn-toolbar" style="padding-left: 2rem">
             <button id="btnDrawTracks" type="button" class="btn btn-secondary btn-sm active" title="Gleise und Signale zeichnen">
                Baumodus
                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tools" viewBox="0 0 16 16">
@@ -67,10 +67,26 @@
             </button>
             <button id="btnImage" type="button" class="btn btn-secondary btn-sm" title="Ansicht als Bild herunterladen">
                <i class="bi bi-camera"></i>
-            </button>
-            <button id="btnTexture" type="button" class="btn btn-secondary btn-sm" title="Echte Schienen anzeigen">
-               <i class="bi bi-emoji-sunglasses-fill"></i>
-            </button>
+            </button>            
+            <div class="dropdown">
+					<button class="btn btn-secondary dropdown-toggle btn-sm" type="button" id="btnOptions"
+						data-bs-toggle="dropdown" data-bs-auto-close="outside" title="weitere Optionen">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+							class="bi bi-gear" viewBox="0 0 16 16">
+							<path
+								d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z" />
+							<path
+								d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z" />
+						</svg>
+						Optionen
+					</button>
+					<div class="dropdown-menu" id="DropDownOptions" style="min-width: 14rem;">
+						<span class="dropdown-item-text" >
+							<div class="form-check form-switch"><input class="form-check-input" type="checkbox" role="switch" id="switch_renderer"><label class="form-check-label" for="switch_renderer">vereinfachte Ansicht</label></div></span>
+						
+					</div>
+
+				</div>
          </div>
          <div class="d-flex ms-auto" style="gap: 10px; padding-right: 1rem">
             <button id="btnAddSignals" type="button" class="btn btn-secondary btn-sm" title="Signale hinzufügen">
@@ -149,11 +165,15 @@
          <div id="signalEditMenu">
             <div id="signalEditMenuHeader">
                <h5 class="card-title">HV Signal</h5>
-               <p class="card-text"><span>Esig A5</span> <a href="#" ><i class="bi bi-pencil"></i></a></p>
-               <input  class="form-control form-control-sm" style="display: none;" type="text">
+               <p class="card-text">
+                  <span>Esig A5</span> <a href="#"><i class="bi bi-pencil"></i></a>
+               </p>
+               <input class="form-control form-control-sm" style="display: none" type="text" />
             </div>
             <div class="btn-group m-3 webkit-fill-width" role="group" aria-label="Basic example">
-               <button id="btnGrundstellung" type="button" class="btn btn-sm btn-outline-primary"><i class="bi bi-0-square"></i> Grundstellung</button>
+               <button id="btnGrundstellung" type="button" class="btn btn-sm btn-outline-primary">
+                  <i class="bi bi-0-square"></i> Grundstellung
+               </button>
                <button id="btn2ndScreen" type="button" class="btn btn-sm btn-outline-primary"><i class="bi bi-search"></i> Einzelansicht</button>
                <button id="btnRemoveSignal" type="button" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i></button>
             </div>
