--- a/start.html
+++ b/start.html
@@ -67,29 +67,42 @@
             </button>
             <button id="btnImage" type="button" class="btn btn-secondary btn-sm" title="Ansicht als Bild herunterladen">
                <i class="bi bi-camera"></i>
-            </button>            
+            </button>
             <div class="dropdown">
-					<button class="btn btn-secondary dropdown-toggle btn-sm" type="button" id="btnOptions"
-						data-bs-toggle="dropdown" data-bs-auto-close="outside" title="weitere Optionen">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-							class="bi bi-gear" viewBox="0 0 16 16">
-							<path
-								d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z" />
-							<path
-								d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z" />
-						</svg>
-						Optionen
-					</button>
-					<div class="dropdown-menu" id="DropDownOptions" style="min-width: 14rem;">
-						<span class="dropdown-item-text" >
-							<div class="form-check form-switch"><input class="form-check-input" type="checkbox" role="switch" id="switch_renderer"><label class="form-check-label" for="switch_renderer">vereinfachte Ansicht</label></div></span>
-						
-					</div>
-
-				</div>
+               <button
+                  class="btn btn-secondary dropdown-toggle btn-sm"
+                  type="button"
+                  id="btnOptions"
+                  data-bs-toggle="dropdown"
+                  data-bs-auto-close="outside"
+                  title="weitere Optionen"
+               >
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
+                     <path
+                        d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"
+                     />
+                     <path
+                        d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"
+                     />
+                  </svg>
+                  Optionen
+               </button>
+               <div class="dropdown-menu" id="DropDownOptions" style="min-width: 14rem">
+                  <span class="dropdown-item-text">
+                     <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="switch_renderer" /><label
+                           class="form-check-label"
+                           for="switch_renderer"
+                           >vereinfachte Ansicht</label
+                        >
+                     </div></span
+                  >
+               </div>
+            </div>
          </div>
          <div class="d-flex ms-auto" style="gap: 10px; padding-right: 1rem">
             <button id="btnAddSignals" type="button" class="btn btn-secondary btn-sm" title="Signale hinzufügen">
+               <i class="bi bi-plus"></i>
                <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -103,9 +116,9 @@
                      d="M9.05.435c-.58-.58-1.52-.58-2.1 0L.436 6.95c-.58.58-.58 1.519 0 2.098l6.516 6.516c.58.58 1.519.58 2.098 0l6.516-6.516c.58-.58.58-1.519 0-2.098L9.05.435ZM6 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V4Z"
                   />
                </svg>
-               Neue Signale
+               Signale
             </button>
-            <button id="btnAddTrain" type="button" class="btn btn-secondary btn-sm" title="Zug hinzufügen" data-bs-toggle="button">
+            <button id="btnAddTrain" type="button" class="btn btn-secondary btn-sm" title="Zug hinzufügen">
                <img src="train-front.svg" width="16" height="16" />
                Züge
             </button>
@@ -115,62 +128,100 @@
          <canvas id="myCanvas" width="10" height="10"></canvas>
       </div>
       <div id="sidebar" class="offcanvas offcanvas-end border rounded shadow-sm" data-bs-scroll="true" data-bs-backdrop="false">
-         <div class="accordion accordion-flush" id="newItemMenu">
-            <div class="accordion-item">
-               <h4 class="accordion-header" id="headingOne">
-                  <button class="accordion-button user-select-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-                     Hauptsignal
-                  </button>
-               </h4>
-               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#newItemMenu">
-                  <div class="accordion-body"></div>
+         <div id="newItemMenu" class="sidebar_menu">
+            <div class="accordion accordion-flush" >
+               <div id="newSignalMenuHeader" class="sidebar_menu_header">
+                  <h5 class="card-title">Neues Signal</h5>
+                  <p class="card-text">Ziehe ein neues Signal an ein Gleis.</p>
                </div>
-            </div>
-            <div class="accordion-item">
-               <h2 class="accordion-header" id="headingTwo">
-                  <button
-                     class="accordion-button collapsed user-select-none"
-                     type="button"
-                     data-bs-toggle="collapse"
-                     data-bs-target="#collapseTwo"
-                     aria-expanded="false"
-                     aria-controls="collapseTwo"
-                  >
-                     Vorsignal
-                  </button>
-               </h2>
-               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#newItemMenu">
-                  <div class="accordion-body"></div>
+               <div class="accordion-item">
+                  <h4 class="accordion-header" id="headingOne">
+                     <button class="accordion-button user-select-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                        Hauptsignal
+                     </button>
+                  </h4>
+                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#newItemMenu">
+                     <div class="accordion-body"></div>
+                  </div>
                </div>
-            </div>
-            <div class="accordion-item">
-               <h2 class="accordion-header" id="headingThree">
-                  <button
-                     class="accordion-button collapsed user-select-none"
-                     type="button"
-                     data-bs-toggle="collapse"
-                     data-bs-target="#collapseThree"
-                     aria-expanded="false"
-                     aria-controls="collapseThree"
-                  >
-                     Lf-Signale
-                  </button>
-               </h2>
-               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#newItemMenu">
-                  <div class="accordion-body"></div>
+               <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                     <button
+                        class="accordion-button collapsed user-select-none"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo"
+                        aria-expanded="false"
+                        aria-controls="collapseTwo"
+                     >
+                        Vorsignal
+                     </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#newItemMenu">
+                     <div class="accordion-body"></div>
+                  </div>
+               </div>
+               <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                     <button
+                        class="accordion-button collapsed user-select-none"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree"
+                        aria-expanded="false"
+                        aria-controls="collapseThree"
+                     >
+                        Lf-Signale
+                     </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#newItemMenu">
+                     <div class="accordion-body"></div>
+                  </div>
                </div>
             </div>
          </div>
+         <div id="newTrainMenu" class="sidebar_menu">
+            <div id="newTrainMenuHeader" class="sidebar_menue_header">
+               <h5 class="card-title">Neuer Zug</h5>
+               <p class="card-text">Ziehe einen Zug auf ein Gleis</p>
+            </div>
+            <div
+               id="newTrain"
+               class="user-select-none"
+               style="background-image: url('zug.png'); background-size: contain; height: 50px; background-repeat: no-repeat"
+            ></div>
+         </div>
 
-         <div id="signalEditMenu">
-            <div id="signalEditMenuHeader">
-               <h5 class="card-title">HV Signal</h5>
+         <div id="editTrainMenu" class="sidebar_menu">
+            <div id="newTrainMenuHeader" class="sidebar_menue_header">
+               <h5 class="card-title">Zug</h5>
+            </div>
+            <div class="row g-3 align-items-center">
+               <div class="col-auto">
+                  <label for="inputZugnummer" class="col-form-label">Zugnummer:</label>
+               </div>
+               <div class="col-auto">
+                  <input type="text" id="inputZugnummer" class="form-control form-control-sm" />
+               </div>
+            </div>
+            <div>
+               <label for="colorInputTrain" class="form-label">Farbe</label>
+               <input type="color" class="form-control form-control-color" id="colorInputTrain" value="#563d7c" title="Choose your color" />
+            </div>
+            <div class="btn-group m-3 webkit-fill-width" role="group">
+               <button id="btnRemoveTrain" type="button" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i> Entfernen</button>
+            </div>
+         </div>
+
+         <div id="signalEditMenu"  class="sidebar_menu">
+            <div id="signalEditMenuHeader" class="sidebar_menue_header">
+               <h5 class="card-title">XXX</h5>
                <p class="card-text">
-                  <span>Esig A5</span> <a href="#"><i class="bi bi-pencil"></i></a>
+                  <span>xxx</span> <a href="#"><i class="bi bi-pencil"></i></a>
                </p>
                <input class="form-control form-control-sm" style="display: none" type="text" />
             </div>
-            <div class="btn-group m-3 webkit-fill-width" role="group" aria-label="Basic example">
+            <div class="btn-group webkit-fill-width mb-3" role="group">
                <button id="btnGrundstellung" type="button" class="btn btn-sm btn-outline-primary">
                   <i class="bi bi-0-square"></i> Grundstellung
                </button>
@@ -178,7 +229,7 @@
                <button id="btnRemoveSignal" type="button" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i></button>
             </div>
             <nav>
-               <div class="nav nav-tabs nav-fill px-1" role="tablist">
+               <div class="nav nav-tabs nav-fill" role="tablist">
                   <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab">
                      Signalstellung
                   </button>
