--- a/start.html
+++ b/start.html
@@ -6,7 +6,7 @@
       <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate" />
       <meta http-equiv="Pragma" content="no-cache" />
       <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
-      <title>Gleisplan</title>
+      <title>Bahn Simulator</title>
       <link rel="stylesheet" href="start.css" />
       <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -136,11 +136,11 @@
                </div>
                <div class="accordion-item">
                   <h4 class="accordion-header" id="headingOne">
-                     <button class="accordion-button user-select-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                     <button class="accordion-button user-select-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
                         Hauptsignal
                      </button>
                   </h4>
-                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#newItemMenu">
+                  <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#newItemMenu">
                      <div class="accordion-body"></div>
                   </div>
                </div>
@@ -150,14 +150,12 @@
                         class="accordion-button collapsed user-select-none"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo"
-                        aria-expanded="false"
-                        aria-controls="collapseTwo"
+                        data-bs-target="#collapse2"
                      >
                         Vorsignal
                      </button>
                   </h2>
-                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#newItemMenu">
+                  <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#newItemMenu">
                      <div class="accordion-body"></div>
                   </div>
                </div>
@@ -167,14 +165,12 @@
                         class="accordion-button collapsed user-select-none"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapseThree"
-                        aria-expanded="false"
-                        aria-controls="collapseThree"
+                        data-bs-target="#collapse3"
                      >
                         Lf-Signale
                      </button>
                   </h2>
-                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#newItemMenu">
+                  <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#newItemMenu">
                      <div class="accordion-body"></div>
                   </div>
                </div>
@@ -193,7 +189,7 @@
          </div>
 
          <div id="editTrainMenu" class="sidebar_menu">
-            <div id="newTrainMenuHeader" class="sidebar_menue_header">
+            <div id="newTrainMenuHeader" class="sidebar_menu_header">
                <h5 class="card-title">Zug</h5>
             </div>
             <div class="row g-3 align-items-center">
@@ -214,7 +210,7 @@
          </div>
 
          <div id="signalEditMenu"  class="sidebar_menu">
-            <div id="signalEditMenuHeader" class="sidebar_menue_header">
+            <div id="signalEditMenuHeader" class="sidebar_menu_header">
                <h5 class="card-title">XXX</h5>
                <p class="card-text">
                   <span>xxx</span> <a href="#"><i class="bi bi-pencil"></i></a>
