--- a/start.html
+++ b/start.html
@@ -7,7 +7,7 @@
       <meta http-equiv="Pragma" content="no-cache" />
       <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
       <title>Bahn Simulator</title>
-      <link rel="stylesheet" href="start.css?01" />
+      <link rel="stylesheet" href="start.css?0" />
       <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -20,16 +20,16 @@
       <script src="dev/jquery-3.7.1.min.js"></script>
       <script src="dev/createjs.js"></script>
 
-      <script src="code/preLoader.js"></script>
-      <script src="code/signaling.js"></script>
+      <script src="code/preLoader.js?02"></script>
+      <script src="code/signaling.js?02"></script>
 
-      <script src="code/tools.js"></script>
-      <script src="code/train.js"></script>
+      <script src="code/tools.js?02"></script>
+      <script src="code/train.js?02"></script>
       <script src="code/track.js?02"></script>
-      <script src="code/signal.js"></script>
-      <script src="code/trackRendering_basic.js"></script>
-      <script src="code/trackRendering_textured.js"></script>
-      <script src="code/start.js?01"></script>
+      <script src="code/signal.js?02"></script>
+      <script src="code/trackRendering_basic.js?02"></script>
+      <script src="code/trackRendering_textured.js?02"></script>
+      <script src="code/start.js?02"></script>
 
       <style type="text/css"></style>
       <script></script>
