--- a/test.html
+++ b/test.html
@@ -1,166 +1,65 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate" />
-        <meta http-equiv="Pragma" content="no-cache" />
-        <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
-        <title>Gleisplan</title>
-        <link rel="stylesheet" href="start.css" />
-        <!--     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+   <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+      <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate" />
+      <meta http-equiv="Pragma" content="no-cache" />
+      <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+      <title>Gleisplan</title>
+      <link rel="stylesheet" href="start.css" />
+      <link
+         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+         rel="stylesheet"
+         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+         crossorigin="anonymous"
+      />
+      <script
+         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+         crossorigin="anonymous"
+      ></script>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+      <script
+         src="https://code.jquery.com/jquery-3.7.1.min.js"
+         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+         crossorigin="anonymous"
+      ></script>
+      <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 
+      <style type="text/css"></style>
+      <script>
+         "use strict";
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script> -->
+         $(() => {
+            init();
+         });
 
-        <link rel="stylesheet" href="dev/bootstrap-5.2.2/bootstrap-icons.css" />
-        <link href="dev/bootstrap-5.2.2/css/bootstrap.min.css" rel="stylesheet" />
-        <script src="dev/bootstrap-5.2.2/js/bootstrap.bundle.min.js"></script>
-        <script src="dev/jquery-3.6.1.js"></script>
-        <script src="dev/createjs.js"></script>
-
-        <script src="code/preLoader.js"></script>
-        <script src="code/signaling.js"></script>
-
-        <script src="code/tools.js"></script>
-        <script src="code/track.js?02"></script>
-
-        <style type="text/css"></style>
-        <script>
-            "use strict";
-
-            $(() => {
-                init();
+         function init() {
+            $("#svgContainer").load("raw%20signal%20images/HV.svg", function () {
+               $("#zs1_licht").hide();
             });
+         }
 
-            function init() {
-                let m = bootstrap.Modal.getOrCreateInstance(loadModal);
-                m._element.addEventListener(
-                    "hidden.bs.modal",
-                    (x) => {
-                        bootstrap.Modal.getOrCreateInstance(x.target).dispose();
-                        /* $(div_setups).empty();
-        $(btnStartFromZero).off('click');
-        $(btnLoadRecent).off('click');
-        $(btnLoadFromFile).off('click'); */
-                    },
-                    { once: true }
-                );
-                m.show();
+         function hideElement(elementId) {
+            const element = document.getElementById(elementId);
+            if (element) {
+               element.style.display = "none"; // Hides the element
             }
-        </script>
-    </head>
+         }
 
-    <body>
-        <canvas id="myCanvas" width="1000" height="1000"></canvas>
-        <div class="modal fade" id="loadModal" tabindex="-1" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg modal-fullscreen-lg-down">
-                <div class="modal-content">
-                    <div class="modal-header bg-light">
-                        <img src="logo.svg" alt="" width="70" height="70" />
-                        <div>
-                            <h5 class="modal-title">Willkommen beim Gleisplan Zeichner</h5>
-                            <p style="margin-bottom: auto">Wähle aus, wie du beginnen möchtest</p>
-                        </div>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body" id="divRecent">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="card">
-                                    <div class="card-header">Streckenband 2 Gleisig</div>
-                                    <div class="card-body">
-                                        <p class="card-text">Das bekannte KTM Streckenband von Wetserhausen bis Kleinstadt.</p>
-                                    </div>
-                                    <div class="card-footer d-grid" style="background-color: white; border-top: none">
-                                        <button href="#" class="btn btn-sm btn-primary">Start</button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="card">
-                                    <div class="card-header">Streckenband 1 Gleisig</div>
-                                    <div class="card-body">
-                                        <p class="card-text">Das bekannte KTM Streckenband von Wetserhausen bis Kleinstadt.</p>
-                                    </div>
-                                    <div class="card-footer d-grid" style="background-color: white; border-top: none">
-                                        <button href="#" class="btn btn-sm btn-primary" disabled>Start</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-body border-top">
-                        <div class="card-group">
-                            <div class="card">
-                                <div class="card-header">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-repeat" viewBox="0 0 16 16">
-                                        <path
-                                            d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"
-                                        />
-                                        <path
-                                            fill-rule="evenodd"
-                                            d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z"
-                                        />
-                                    </svg>
-                                    &nbsp;zuletzt verwendet
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Den Gleisplan wie in der letzten Sitzung öffnen</p>
-                                </div>
-                                <div class="card-footer d-grid" style="background-color: white; border-top: none">
-                                    <button href="#" class="btn btn-sm btn-primary">Start</button>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-0-square" viewBox="0 0 16 16">
-                                        <path
-                                            d="M7.988 12.158c-1.851 0-2.941-1.57-2.941-3.99V7.84c0-2.408 1.101-3.996 2.965-3.996 1.857 0 2.935 1.57 2.935 3.996v.328c0 2.408-1.101 3.99-2.959 3.99ZM8 4.951c-1.008 0-1.629 1.09-1.629 2.895v.31c0 1.81.627 2.895 1.629 2.895s1.623-1.09 1.623-2.895v-.31c0-1.8-.621-2.895-1.623-2.895Z"
-                                        />
-                                        <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2Zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2Z" />
-                                    </svg>
-                                    &nbsp;Ohne Vorgaben
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Öffnet einen leeren Zeichenbereich.</p>
-                                </div>
-                                <div class="card-footer d-grid" style="background-color: white; border-top: none">
-                                    <button href="#" class="btn btn-sm btn-primary">Start</button>
-                                </div>
-                            </div>
+         // Function to show an element by changing the display property
+         function showElement(elementId) {
+            const element = document.getElementById(elementId);
+            if (element) {
+               element.style.display = "block"; // Shows the element
+            }
+         }
+      </script>
+   </head>
 
-                            <div class="card">
-                                <div class="card-header">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-upload" viewBox="0 0 16 16">
-                                        <path
-                                            fill-rule="evenodd"
-                                            d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"
-                                        />
-                                        <path
-                                            fill-rule="evenodd"
-                                            d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3z"
-                                        />
-                                    </svg>
-                                    &nbsp;aus einer Datei
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Lade einen Gleisplan, den du auf deinem Gerät gespeicht hast.</p>
-                                </div>
-                                <div class="card-footer d-grid" style="background-color: white; border-top: none">
-                                    <button href="#" class="btn btn-sm btn-primary" disabled>Start</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
+   <body>
+    <div id="svgContainer"></div>
+      
+   </body>
 </html>
